Update directories